Home page edit, sligt changes in sidebar file,export of metadata NW

--- a/src/components/home/index.module.css
+++ b/src/components/home/index.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     flex-direction: row;
 }
@@ -22,4 +22,4 @@
     margin-left: 200px;
     font-weight: 10;
     font-size: 1.5rem;
-}
+} */
